bnb part 1